[package]
name = "space_invaders"
version = "0.1.0"
authors = ["michele <michele.damico@gmail.com>"]

[dependencies]
rs8080 = { path="../" }
log="*"
simple_logger = "*"
structopt="*"
gl = "0.10.0"
# I should fix it
cfg-if = "0.1.9"

[dependencies.sdl2]
version = "*"
features = ["static-link","bundled"]

[dev-dependencies]
rstest = "0.3"
